--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
         gtag('js', new Date());
         gtag('config', 'G-W0E9XK17NT');
     </script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bachelor of Commerce - April 2025 (Semester V)</title>
+    <title>Bachelor of Commerce - April 2025 (Semester VI)</title>
 
     <!-- ✅ Tab icon -->
     <link rel="icon" type="image/png" href="logos.png">
 
     <!-- Google Font: Source Sans Pro -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&amp;display=fallback">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://adminlte.io/themes/v3/plugins/fontawesome-free/css/all.min.css">
     <!-- Theme -->
