--- a/result.html
+++ b/result.html
@@ -119,9 +119,9 @@
                                             <tbody>
                                                 <tr><td>UCEC104 International Economics</td><td>32</td><td>F</td></tr>
                                                 <tr><td>UCOC112 Human Resource Management</td><td>52</td><td>B</td></tr>
-                                                <tr><td>UCOD119 Financial Management II</td><td>47</td><td>C</td></tr>
-                                                <tr><td>UCOD123 Strategic Management</td><td>49</td><td>C</td></tr>
-                                                <tr><td>UCOD131 Brand Management</td><td>58</td><td>B+</td></tr>
+                                                <tr><td>UCOD119 Business Management Major V - Financial Management II</td><td>47</td><td>C</td></tr>
+                                                <tr><td>UCOD123 Business Management Major VI –  Strategic Management</td><td>49</td><td>C</td></tr>
+                                                <tr><td>UCOD131 Business Management Major VIII - Brand Management</td><td>58</td><td>B+</td></tr>
                                                 <tr><td>UCOP101 COMMERCE (PROJECT)</td><td>80</td><td>A+</td></tr>
                                             </tbody>
                                         </table>
